// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Navbar component should match the snapshot when open is false 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  width: 20%;
  height: auto;
}

.c1 {
  min-width: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style-type: none;
  margin: 0;
  padding: 0;
  min-width: 50%;
}

.c4 {
  padding: 1rem;
  width: 100%;
}

@media (max-width:576px) {
  .c0 {
    width: 100%;
    z-index: 100;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    background: white;
    -webkit-transform: translateX(-100%);
    -ms-transform: translateX(-100%);
    transform: translateX(-100%);
    height: 100%;
    text-align: left;
    padding: 2rem;
    position: fixed;
    top: 0;
    left: 0;
    -webkit-transition: -webkit-transform 0.3s ease-in-out;
    -webkit-transition: transform 0.3s ease-in-out;
    transition: transform 0.3s ease-in-out;
  }

  .c0 a {
    font-size: 2rem;
    text-transform: uppercase;
    padding: 2rem 0;
    font-weight: bold;
    -webkit-letter-spacing: 0.5rem;
    -moz-letter-spacing: 0.5rem;
    -ms-letter-spacing: 0.5rem;
    letter-spacing: 0.5rem;
    -webkit-text-decoration: none;
    text-decoration: none;
    -webkit-transition: color 0.3s linear;
    transition: color 0.3s linear;
  }
}

@media (max-width:576px) {
  .c3 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div>
  <nav
    class="c0"
  >
    <div
      class="c1"
    >
      <img
        alt="Logo"
        class="c2"
        src="logo.png"
      />
    </div>
    <ul
      class="c3"
    >
      <li
        class="c4"
      >
        <div
          data-testid="link_/"
        />
      </li>
      <li
        class="c4"
      >
        <div
          data-testid="link_/help"
        />
      </li>
      <li
        class="c4"
      >
        <div
          data-testid="link_/"
        />
      </li>
      <li
        class="c4"
      >
        <div
          data-testid="link_/about"
        />
      </li>
    </ul>
  </nav>
</div>
`;

exports[`the Navbar component should match the snapshot when open is true 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  width: 20%;
  height: auto;
}

.c1 {
  min-width: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style-type: none;
  margin: 0;
  padding: 0;
  min-width: 50%;
}

.c4 {
  padding: 1rem;
  width: 100%;
}

@media (max-width:576px) {
  .c0 {
    width: 100%;
    z-index: 100;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    background: white;
    -webkit-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
    height: 100%;
    text-align: left;
    padding: 2rem;
    position: fixed;
    top: 0;
    left: 0;
    -webkit-transition: -webkit-transform 0.3s ease-in-out;
    -webkit-transition: transform 0.3s ease-in-out;
    transition: transform 0.3s ease-in-out;
  }

  .c0 a {
    font-size: 2rem;
    text-transform: uppercase;
    padding: 2rem 0;
    font-weight: bold;
    -webkit-letter-spacing: 0.5rem;
    -moz-letter-spacing: 0.5rem;
    -ms-letter-spacing: 0.5rem;
    letter-spacing: 0.5rem;
    -webkit-text-decoration: none;
    text-decoration: none;
    -webkit-transition: color 0.3s linear;
    transition: color 0.3s linear;
  }
}

@media (max-width:576px) {
  .c3 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div>
  <nav
    class="c0"
    open=""
  >
    <div
      class="c1"
    >
      <img
        alt="Logo"
        class="c2"
        src="logo.png"
      />
    </div>
    <ul
      class="c3"
    >
      <li
        class="c4"
      >
        <div
          data-testid="link_/"
        />
      </li>
      <li
        class="c4"
      >
        <div
          data-testid="link_/help"
        />
      </li>
      <li
        class="c4"
      >
        <div
          data-testid="link_/"
        />
      </li>
      <li
        class="c4"
      >
        <div
          data-testid="link_/about"
        />
      </li>
    </ul>
  </nav>
</div>
`;
